--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
          <div id="header"></div>
          <div id="navigation"></div>
          <div id="main_content">
-            <div class="subcontents"></div>
-            <div class="subcontents"></div>
-            <div class="subcontents"></div>
-            <div id="advertisement"></div>
+            <div class="subcontents" style="margin-right: 5px;"></div>
+            <div class="subcontents" style="
+               margin-left: 5px;
+               margin-right: 5px;"></div>
+            <div class="subcontents" style="margin-left: 5px;"></div>
+            <div id="advertisement" style="margin-left: 15px;"></div>
          </div>
       </div><!-- end of wrapper -->
    </body>
